--- a/batalla_github/index.html
+++ b/batalla_github/index.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.19/sweetalert2.min.css" integrity="sha512-CJ5goVzT/8VLx0FE2KJwDxA7C6gVMkIGKDx31a84D7P4V3lOVJlGUhC2mEqmMHOFotYv4O0nqAOD0sEzsaLMBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="container">
       <h1 class="text-center mt-4">Bienvenid@s a la Batalla de Github!</h1>
-      <div class="row mt-5">
+      <div class="row mt-5 users">
+        <!-- Acá van los usuarios -->
         <div class="col-6">
           <div class="card card-user-1">
             <div class="card-body">
               <h5 class="card-title">Jugador 1</h5>
               <div class="row">
                 <div class="col-9">
-                  <input type="text" class="form-control" id="username1">
+                  <input type="text" class="form-control username">
                 </div>
                 <div class="col-3">
-                  <button id="btn1" class="btn btn-primary">GO!</button>
+                  <button class="btn btn-primary btn-buscar">GO!</button>
                 </div>
               </div>
             </div>
@@ -34,16 +36,17 @@
             </div>
           </div>
         </div>
+
         <div class="col-6">
           <div class="card card-user-2">
             <div class="card-body">
-              <h5 class="card-title">Jugador 2</h5>
+              <h5 class="card-title">Jugador 1</h5>
               <div class="row">
                 <div class="col-9">
-                  <input type="text" class="form-control" id="username2">
+                  <input type="text" class="form-control username">
                 </div>
                 <div class="col-3">
-                  <button id="btn2" class="btn btn-primary">GO!</button>
+                  <button class="btn btn-primary btn-buscar">GO!</button>
                 </div>
               </div>
             </div>
@@ -58,12 +61,16 @@
             </div>
           </div>
         </div>
+        
+
       </div>
       <p class="text-center mt-5">
-        <button class="btn btn-success">BATTLE!</button>
+        <button class="btn btn-success" id="btn-battle">BATTLE!</button>
       </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.19/sweetalert2.all.min.js" integrity="sha512-o/FohCnw63hew8nW4BnBfJaTjvc50EA/Uq5hDtm25VRdQGYDgsr72IGks8Ji9evnFfQjBd9S89CWlJh4+gYlEw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--<script src="script.js"></script>-->
+    <script src="script_clases.js"></script>
   </body>
 </html>
