--- a/batalla_github/index.html
+++ b/batalla_github/index.html
@@ -6,6 +6,11 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.19/sweetalert2.min.css" integrity="sha512-CJ5goVzT/8VLx0FE2KJwDxA7C6gVMkIGKDx31a84D7P4V3lOVJlGUhC2mEqmMHOFotYv4O0nqAOD0sEzsaLMBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+      .card img {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -14,6 +19,7 @@
         <!-- Acá van los usuarios -->
         <div class="col-6">
           <div class="card card-user-1">
+            <img src="https://www.clarin.com/img/2020/08/16/avatar-the-last-airbender-foto___pck4_8liS_1200x630__1.jpg" class="card-img-top" alt="avatar">
             <div class="card-body">
               <h5 class="card-title">Jugador 1</h5>
               <div class="row">
@@ -39,6 +45,7 @@
 
         <div class="col-6">
           <div class="card card-user-2">
+            <img src="https://www.clarin.com/img/2020/08/16/avatar-the-last-airbender-foto___pck4_8liS_1200x630__1.jpg" class="card-img-top" alt="avatar">
             <div class="card-body">
               <h5 class="card-title">Jugador 1</h5>
               <div class="row">
