FIX: Uso de clases en Batalla de Github

--- a/batalla_github/index.html
+++ b/batalla_github/index.html
@@ -78,6 +78,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.19/sweetalert2.all.min.js" integrity="sha512-o/FohCnw63hew8nW4BnBfJaTjvc50EA/Uq5hDtm25VRdQGYDgsr72IGks8Ji9evnFfQjBd9S89CWlJh4+gYlEw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--<script src="script.js"></script>-->
-    <script src="script_clases.js"></script>
+    <script src="script_clases.js" type="module"></script>
   </body>
 </html>
